add detail to profile page

--- a/profile.html
+++ b/profile.html
@@ -8,5 +8,22 @@
         <header>
             <h1>662115042, Rattikan Muangmoon</h1>
         </header>
+        <section>
+            <h2>About Me</h2>
+                <p><strong>Date of birth:</strong> October 1, 2004</p>
+                <p><strong>Education:</strong> Software Engineering, Chiang Mai University</p>
+        </section>
+        <section>
+            <h2>Hobbies</h2>
+            <ul>
+                <li>Playing Guitar</li>
+                <li>listening to music</li>
+                <li>Explore nature</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Contact Me</h2>
+                <p><strong>Email:</strong> <a href="mailto:Rattikan_m@cmu.ac.th">Rattikan_m@cmu.ac.th</a></p>
+        </section>
     </body>
 </html>
