--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Index</title>
     </head>
     <body>
+        <p>To be continued</p>
         <a href="profile.html">Profile</a>
     </body>
 </html>
