--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <a href="profile.html">Profile</a>
+        <a href="friendprofile.html">Friend Profile</a>
     </body>
 </html>
