--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <a href="profile.html">Profile</a>
         <a href="friendprofile.html">Friend Profile</a>
+        <img src="hubheartpng.PNG" alt="hubheartpng">
     </body>
 </html>
